<resources>
    <string name="app_name">Azure Mobile Services</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="table_storage">Table Storage</string>
    <string name="blob_storage">Blob Storage</string>
    <string name="launch_screen_info">Which type of Windows Azure storage do you want to work with?</string>
    <string name="title_activity_tables">TablesActivity</string>
    <string name="title_activity_containers">ContainersActivity</string>
    <string name="title_activity_blobs">BlobsActivity</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="table_name">Table Name:</string>
    <string name="add_table">Add Table</string>
    <string name="add_table_row">Add Row</string>
    <string name="save_row">Save Row</string>
    <string name="title_activity_new_table_row">NewTableRowActivity</string>
    <string name="add_container">Add Container</string>
    <string name="container_name">Container Name:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="is_public">Is Public:</string>
    <string name="add_blob">Add Blob</string>
    <string name="title_activity_blob_details">BlobDetailsActivity</string>
    <string name="blob_name">Blob Name:</string>
    <string name="url">URL:</string>
    <string name="content_type">Content-Type:</string>
    <string name="load_with_sas">Load with SAS</string>
    <string name="select_image">Select Image</string>
    <string name="create_with_sas">Create Blob with SAS</string>
    <string name="placeholder">Placeholder</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="title_activity_test_activity_with_fragment">TestActivityWithFragment</string>

</resources>
